--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "mcp",
+  "name": "@sylphx/mcp-tools",
   "version": "1.0.0",
-  "description": "",
+  "description": "Modular MCP server toolkit - Collection of composable tools for AI agents",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SylphxAI/tools.git"
+  },
+  "homepage": "https://github.com/SylphxAI/tools#readme",
+  "bugs": {
+    "url": "https://github.com/SylphxAI/tools/issues"
+  },
+  "author": "Sylphx",
+  "license": "MIT",
   "scripts": {
     "build": "turbo run build",
     "build:watch": "turbo watch build",
     "lint": "biome lint",
     "test": "pnpm build && vitest run"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": ["mcp", "model-context-protocol", "tools", "ai", "agents", "typescript", "monorepo"],
   "packageManager": "pnpm@10.8.1",
   "devDependencies": {
     "@changesets/cli": "^2.29.2",
