--- a/packages/tools-pdf/package.json
+++ b/packages/tools-pdf/package.json
@@ -36,7 +36,7 @@
   "license": "ISC",
   "dependencies": {
     "@sylphlab/tools-core": "workspace:*",
-    "mupdf": "latest",
+    "mupdf": "^1.3.6",
     "zod": "^3.23.8"
   },
   "devDependencies": {
