--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "build": "turbo run build",
     "build:watch": "turbo watch build",
     "lint": "biome lint",
-    "test": "pnpm build && vitest run"
+    "test": "pnpm build && vitest run",
+    "changeset": "changeset",
+    "changeset:version": "changeset version",
+    "changeset:publish": "changeset publish"
   },
   "keywords": ["mcp", "model-context-protocol", "tools", "ai", "agents", "typescript", "monorepo"],
   "packageManager": "pnpm@10.8.1",
